HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiReturnRegionLocalRawPtr/Source/Main.uv
//! Rejected FFI specimen for returning region-local raw pointers from exports.

[[export("C")]]
public procedure ffiReturnRegionLocalRawPtrReference() -> *mut i32 {
    region as scratch {
        let raw: *mut i32 = null
        let pointer: *mut i32 = scratch ^ raw
        return pointer
    }
    return null
}
